# pharmds

./: $null  .gitignore  .pre-comit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  DISCLAIMER.txt  LICENSE  README.md  ROADMAP.md  approved_claim.json  drugs.txt  evidence_gap_report.json  example_submission.json  pyproject.toml  streamlit_app.py  tmp_remove_legacy_h1_claims.py
api/: __init__.py  main.py  models.py
app/: api.py  cli.py  contributor_ui.py  json_output.py  render.py  service.py
core/: constants.py  enums.py  evidence.py  exceptions.py  mechanism_aggregation.py  mechanism_aggregation_debug.py  mechanism_arbitration.py  mechanism_arbitration_debug.py  mechanism_candidate_debug.py  mechanism_candidates.py  mechanism_debug.py  mechanism_effect.py  mechanism_inference.py  mechanism_pipeline.py  mechanism_pipeline_json.py  mechanism_policy.py  mechanism_policy_debug.py  mechanism_registry.py  mechanism_scoring.py  mechanism_scoring_debug.py  models.py  units.py
data/: loaders.py  pharmds.sqlite3  schema.sql  seed_sqlite.py  transporters.json
docs/: ADDING_A_DRUG.txt  ADDING_A_RULE.txt  drug_monographs.md  policy_rules.md  safety.md  scope.md
reasoning/: combine.py  explain.py  pd.py  pk.py  rationale.py
rules/: builtins.py  composite_rules.py  engine.py  validate_rules.py
tests/: conftest.py  helpers.py  test_aripiprazole_rules.py  test_candidates_evidence.py  test_cli_aggregate_evidence_output.py  test_cli_aggregate_summary_output.py  test_cli_domains.py  test_cli_errors.py  test_cli_evidence_gap_output.py  test_cli_json_output.py  (+59 more)
web/: index.html  (+2 more)
(+211 files in other folders)
