[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pharmds"
version = "0.0.0"
description = "Educational PK/PD interaction reasoner (rule-based)"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
]

cli = ["rich>=13.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "core*", "data*", "rules*", "reasoning*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"data/seed_sqlite.py" = ["E501"]
"rules/composite_rules.py" = ["E501"]
"rules/engine.py" = ["E501"]
"rules/validate_rules.py" = ["E501"]
"reasoning/pd.py" = ["E501"]
"reasoning/pk.py" = ["E501"]
"reasoning/combine.py" = ["E501"]
"tests/test_negative_scenarios.py" = ["E501"]
"tests/test_scenarios.py" = ["E501"]